# fitc

./: .firebaserc  .gitignore  README.md  angular.json  firebase.json  firestore.indexes.json  firestore.rules  jest.config.js  jest.integ.config.js  jest.unit.config.js  karma.conf.js  package-lock.json  package.json  tslint.json
common/: admin-sdk.ts  factory.ts  jest.config.js  level-update-policy.ts  level-update-policy.unit.test.ts  path.ts  types.ts  utils.ts  utils.unit.test.ts
common/platform/: admin.ts  base.ts  sandbox.ts  web.ts
e2e/src/: app.e2e-spec.ts
functions/: .gitignore  jest.integ.config.js  jest.unit.config.js  package-lock.json  package.json  tsconfig.json
functions/src/: admin.ts  constant.ts  data.ts  factory.ts  firebase.ts  index.ts  internal-types.ts  level-update-policy.ts  level-update-policy.unit.test.ts
functions/src/dao/: index.ts  recent-games.integ.test.ts  recent-games.ts
functions/src/http/: create-game-record.ts
functions/src/reducers/: index.ts  (+5 more)
functions/test/: helper.ts  index.ts  init-emulator.ts  utils.ts
scripts/: README.md  firestore_shell.py  init_emulator.py  migrate_v0_to_v1.py  promo_threshold_gen.py  pyproject.toml  requirements.txt  user_mapping_v0.json
src/: index.html  manifest.webmanifest  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
src/environments/: environment.prod.ts  environment.ts
test/: client-sdk.ts  helper.ts  jest.integ.config.js  utils.ts
test/scenario/: create-game-record.integ.test.ts
(+59 files in other folders)
