[tool.poetry]
name = "fitc-scripts"
version = "0.1.0"
description = ""
authors = ["Jongbin Park <jjong@google.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
tqdm = "^4.40"
google-cloud-firestore = "^1.6"
fire = "^0.2.1"
scipy = "^1.3"
Pygments = "^2.5"
colorama = "^0.4.1"
firebase-admin = "^3.2"
python-dateutil = "^2.8"
numpy = "^1.17"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
